--- a/server/src/main/resources/orderItemsReport.jrxml
+++ b/server/src/main/resources/orderItemsReport.jrxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.13.0.final using JasperReports Library version 6.13.0-46ada4d1be8f3c5985fd0b6146f3ed44caed6f05  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A44_Landscape" pageWidth="850" pageHeight="595" orientation="Landscape" columnWidth="810" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="68e765db-4767-4e80-9b9b-317caaf88926">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A44_Landscape" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="68e765db-4767-4e80-9b9b-317caaf88926">
     <parameter name="logo" class="java.lang.String"/>
+
     <field name="id" class="java.lang.Long">
     </field>
     <field name="userId" class="java.lang.Integer">
@@ -9,28 +10,26 @@
 
     <field name="orderDate" class="java.util.Date">
     </field>
-    <field name="userName" class="java.lang.String">
-    </field>
-    <field name="userAddress" class="java.lang.String">
+
+    <field name="productName" class="java.lang.String">
     </field>
 
+    <field name="price" class="java.lang.Double">
+    </field>
+    <field name="quantity" class="java.lang.Integer">
+    </field>
     <field name="shipping" class="java.lang.Double">
     </field>
-
-    <field name="total" class="java.lang.Double">
+    <field name="itemTotal" class="java.lang.Double">
     </field>
 
-
-    <variable name="netTotal" class="java.lang.Double">
-        <variableExpression><![CDATA[$F{shipping}+$F{total}]]></variableExpression>
-    </variable>
     <background>
         <band splitType="Stretch"/>
     </background>
     <title>
         <band height="70" splitType="Stretch">
             <frame>
-                <reportElement mode="Opaque" x="-30" y="-20" width="860" height="90" backcolor="#4049FF" uuid="0ec3de8c-d019-4ceb-9fcd-c6be75d6aa02"/>
+                <reportElement mode="Opaque" x="-20" y="-20" width="840" height="90" backcolor="#4049FF" uuid="0ec3de8c-d019-4ceb-9fcd-c6be75d6aa02"/>
                 <staticText>
                     <reportElement x="250" y="0" width="260" height="80" forecolor="#FFFFFF" uuid="3c828023-ad08-4a7f-9e80-0451fe49a068"/>
                     <textElement textAlignment="Center" verticalAlignment="Middle">
@@ -46,7 +45,7 @@
         </band>
     </title>
     <pageHeader>
-        <band height="52" splitType="Stretch">
+        <band height="42" splitType="Stretch">
             <staticText>
                 <reportElement x="220" y="0" width="298" height="30" forecolor="#FFFFFF" uuid="a3bd2410-a52e-4f14-962a-190aa51a46d0"/>
                 <textElement textAlignment="Center" verticalAlignment="Middle">
@@ -55,25 +54,25 @@
                 <text><![CDATA[Order Details Report]]></text>
             </staticText>
             <staticText>
-                <reportElement x="-20" y="11" width="130" height="30" uuid="28a1ac0b-edf8-4b4a-b564-15695e859a11"/>
+                <reportElement x="20" y="0" width="90" height="30" uuid="28a1ac0b-edf8-4b4a-b564-15695e859a11"/>
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="20"/>
                 </textElement>
-                <text><![CDATA[User Id : ]]></text>
+                <text><![CDATA[User Id: ]]></text>
             </staticText>
             <textField>
-                <reportElement x="120" y="12" width="100" height="30" uuid="91162adb-f30b-4e12-8eb4-a49861fd2dd2"/>
+                <reportElement x="120" y="0" width="100" height="30" uuid="91162adb-f30b-4e12-8eb4-a49861fd2dd2"/>
                 <textElement textAlignment="Left" verticalAlignment="Middle">
                     <font size="20"/>
                 </textElement>
                 <textFieldExpression><![CDATA[$F{userId}]]></textFieldExpression>
             </textField>
             <staticText>
-                <reportElement x="247" y="0" width="210" height="42" uuid="f50e0e3a-50a0-4ec6-ba25-fe27012c213c"/>
+                <reportElement x="210" y="0" width="271" height="42" uuid="f50e0e3a-50a0-4ec6-ba25-fe27012c213c"/>
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="20"/>
                 </textElement>
-                <text><![CDATA[ORDERS Report]]></text>
+                <text><![CDATA[ORDER ITEM REPORT]]></text>
             </staticText>
             <textField>
                 <reportElement x="530" y="10" width="290" height="30" uuid="8fc6948b-9840-4bdd-af1a-4e2b4865c35c"/>
@@ -96,10 +95,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[ORDER ID]]></text>
+                <text><![CDATA[ID]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="100" y="0" width="120" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="735f2e46-7410-4ff8-b105-a2e97af6211d">
+                <reportElement mode="Opaque" x="100" y="0" width="156" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="735f2e46-7410-4ff8-b105-a2e97af6211d">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="cc667c8a-7cf1-4477-b610-993e60dc971f"/>
                 </reportElement>
                 <box>
@@ -111,7 +110,7 @@
                 <text><![CDATA[ORDER DATE]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="220" y="0" width="144" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="01afa4f4-2f6b-4405-ae68-e267fc0d1d79">
+                <reportElement mode="Opaque" x="256" y="0" width="134" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="01afa4f4-2f6b-4405-ae68-e267fc0d1d79">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="72868b3b-c2de-4500-b819-cdb742007e6b"/>
                 </reportElement>
                 <box>
@@ -120,10 +119,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[USER NAME]]></text>
+                <text><![CDATA[PRODUCT]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="364" y="0" width="154" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="5a076ada-d7af-45fe-9d34-e73e413b2745">
+                <reportElement mode="Opaque" x="390" y="0" width="108" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="5a076ada-d7af-45fe-9d34-e73e413b2745">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9558e96b-aad0-47a1-9305-1681d96ba65f"/>
                 </reportElement>
                 <box>
@@ -132,10 +131,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[USER ADDRESS]]></text>
+                <text><![CDATA[PRICE]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="518" y="0" width="112" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="821ce6e5-aa4b-4569-8233-f14f6aacb45e">
+                <reportElement mode="Opaque" x="498" y="0" width="81" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="821ce6e5-aa4b-4569-8233-f14f6aacb45e">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="017d99c1-57ef-436c-9356-1ce197947c23"/>
                 </reportElement>
                 <box>
@@ -144,19 +143,7 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[SHIPPING]]></text>
-            </staticText>
-            <staticText>
-                <reportElement mode="Opaque" x="630" y="0" width="110" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="28ad0d08-5177-4b6a-bcbf-4295c8c1382d">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="b3d3dd88-9ab5-4615-bed0-bc83125c8694"/>
-                </reportElement>
-                <box>
-                    <pen lineWidth="1.0"/>
-                </box>
-                <textElement textAlignment="Center" verticalAlignment="Middle">
-                    <font size="12" isBold="true"/>
-                </textElement>
-                <text><![CDATA[TOTAL]]></text>
+                <text><![CDATA[QUANTITY]]></text>
             </staticText>
             <staticText>
                 <reportElement mode="Opaque" x="-20" y="0" width="50" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="4b87df01-dca2-445a-a8e9-87a31175b74e"/>
@@ -169,8 +156,8 @@
                 <text><![CDATA[No.]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="740" y="0" width="90" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="f511ce87-112b-4328-8052-e476ffd7a158">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="b3d3dd88-9ab5-4615-bed0-bc83125c8694"/>
+                <reportElement mode="Opaque" x="579" y="0" width="111" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="95f647b1-160a-4b15-9518-d280ffcad372">
+                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9116925d-1113-4756-952b-5708726ca717"/>
                 </reportElement>
                 <box>
                     <pen lineWidth="1.0"/>
@@ -178,7 +165,19 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[NET TOTAL]]></text>
+                <text><![CDATA[SHIPPING]]></text>
+            </staticText>
+            <staticText>
+                <reportElement mode="Opaque" x="690" y="0" width="132" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="ac96de7d-b935-42c6-9c85-0041747daf19">
+                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="b5c63cb7-86ae-4312-943f-54f32a92e1ba"/>
+                </reportElement>
+                <box>
+                    <pen lineWidth="1.0"/>
+                </box>
+                <textElement textAlignment="Center" verticalAlignment="Middle">
+                    <font size="12" isBold="true"/>
+                </textElement>
+                <text><![CDATA[ITEM TOTAL]]></text>
             </staticText>
         </band>
     </columnHeader>
@@ -197,7 +196,7 @@
                 <textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="100" y="0" width="120" height="30" uuid="23ad2728-8053-4966-b7f3-9101948802af">
+                <reportElement x="100" y="0" width="156" height="30" uuid="23ad2728-8053-4966-b7f3-9101948802af">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="cc667c8a-7cf1-4477-b610-993e60dc971f"/>
                 </reportElement>
                 <box>
@@ -209,7 +208,7 @@
                 <textFieldExpression><![CDATA[$F{orderDate}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="220" y="0" width="144" height="30" uuid="49ec03d7-d661-4094-9991-761950a5729f">
+                <reportElement x="256" y="0" width="134" height="30" uuid="49ec03d7-d661-4094-9991-761950a5729f">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="72868b3b-c2de-4500-b819-cdb742007e6b"/>
                 </reportElement>
                 <box>
@@ -218,10 +217,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12"/>
                 </textElement>
-                <textFieldExpression><![CDATA[$F{userName}]]></textFieldExpression>
+                <textFieldExpression><![CDATA[$F{productName}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="364" y="0" width="154" height="30" uuid="df651284-fbf4-420b-b3c6-3d2ef44c4ba7">
+                <reportElement x="390" y="0" width="108" height="30" uuid="df651284-fbf4-420b-b3c6-3d2ef44c4ba7">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9558e96b-aad0-47a1-9305-1681d96ba65f"/>
                 </reportElement>
                 <box>
@@ -230,10 +229,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12"/>
                 </textElement>
-                <textFieldExpression><![CDATA[$F{userAddress}]]></textFieldExpression>
+                <textFieldExpression><![CDATA[$F{price}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="518" y="0" width="112" height="30" uuid="5daa052e-bf88-46d4-a695-22222aaf72a5">
+                <reportElement x="498" y="0" width="81" height="30" uuid="5daa052e-bf88-46d4-a695-22222aaf72a5">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="017d99c1-57ef-436c-9356-1ce197947c23"/>
                 </reportElement>
                 <box>
@@ -242,7 +241,7 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12"/>
                 </textElement>
-                <textFieldExpression><![CDATA[$F{shipping}]]></textFieldExpression>
+                <textFieldExpression><![CDATA[$F{quantity}]]></textFieldExpression>
             </textField>
             <textField>
                 <reportElement x="-20" y="0" width="50" height="30" uuid="82f418c7-a0f7-4744-99c1-bfc87bfa1bfb"/>
@@ -255,22 +254,28 @@
                 <textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="630" y="0" width="110" height="30" uuid="c5b02ea6-456b-4159-99db-08a4bc51b41e">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ee6b0869-2b4c-4a97-8a27-661d4397df95"/>
+                <reportElement x="690" y="0" width="132" height="30" uuid="4a1f8b49-bdb9-4f78-9fd3-895e9fd1ec11">
+                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="b5c63cb7-86ae-4312-943f-54f32a92e1ba"/>
                 </reportElement>
                 <box>
                     <pen lineWidth="0.5"/>
                 </box>
-                <textElement textAlignment="Center" verticalAlignment="Middle"/>
-                <textFieldExpression><![CDATA[$F{total}]]></textFieldExpression>
+                <textElement textAlignment="Center" verticalAlignment="Middle">
+                    <font size="12"/>
+                </textElement>
+                <textFieldExpression><![CDATA[$F{shipping}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="740" y="0" width="90" height="30" uuid="989e310e-8db9-48b3-8d94-97a46e1654ea"/>
+                <reportElement x="580" y="0" width="110" height="30" uuid="c50f96b1-5e99-46ab-aecc-b3224f65c01f">
+                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9116925d-1113-4756-952b-5708726ca717"/>
+                </reportElement>
                 <box>
                     <pen lineWidth="0.5"/>
                 </box>
-                <textElement textAlignment="Center" verticalAlignment="Middle"/>
-                <textFieldExpression><![CDATA[$V{netTotal}]]></textFieldExpression>
+                <textElement textAlignment="Center" verticalAlignment="Middle">
+                    <font size="12"/>
+                </textElement>
+                <textFieldExpression><![CDATA[$F{itemTotal}]]></textFieldExpression>
             </textField>
         </band>
     </detail>
