--- a/server/src/main/resources/profitsReport.jrxml
+++ b/server/src/main/resources/profitsReport.jrxml
@@ -1,36 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.13.0.final using JasperReports Library version 6.13.0-46ada4d1be8f3c5985fd0b6146f3ed44caed6f05  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A44_Landscape" pageWidth="850" pageHeight="595" orientation="Landscape" columnWidth="810" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="68e765db-4767-4e80-9b9b-317caaf88926">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A44_Landscape" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="68e765db-4767-4e80-9b9b-317caaf88926">
     <parameter name="logo" class="java.lang.String"/>
-    <field name="id" class="java.lang.Long">
+
+    <field name="productId" class="java.lang.Integer">
+
     </field>
-    <field name="userId" class="java.lang.Integer">
+    <field name="productName" class="java.lang.String">
+
+    </field>
+    <field name="categoryName" class="java.lang.String">
+
+    </field>
+    <field name="cost" class="java.lang.Double">
+
+    </field>
+    <field name="price" class="java.lang.Double">
+
+    </field>
+    <field name="vendorName" class="java.lang.String">
     </field>
 
-    <field name="orderDate" class="java.util.Date">
-    </field>
-    <field name="userName" class="java.lang.String">
-    </field>
-    <field name="userAddress" class="java.lang.String">
-    </field>
-
-    <field name="shipping" class="java.lang.Double">
-    </field>
-
-    <field name="total" class="java.lang.Double">
-    </field>
-
-
-    <variable name="netTotal" class="java.lang.Double">
-        <variableExpression><![CDATA[$F{shipping}+$F{total}]]></variableExpression>
+    <variable name="profit" class="java.lang.Double">
+        <variableExpression><![CDATA[$F{price}-$F{cost}]]></variableExpression>
     </variable>
+
+    <variable name="Variable_1" class="java.lang.Double" calculation="Sum">
+        <variableExpression><![CDATA[$V{profit}]]></variableExpression>
+    </variable>
+
     <background>
         <band splitType="Stretch"/>
     </background>
     <title>
         <band height="70" splitType="Stretch">
             <frame>
-                <reportElement mode="Opaque" x="-30" y="-20" width="860" height="90" backcolor="#4049FF" uuid="0ec3de8c-d019-4ceb-9fcd-c6be75d6aa02"/>
+                <reportElement mode="Opaque" x="-20" y="-20" width="842" height="90" backcolor="#4049FF" uuid="0ec3de8c-d019-4ceb-9fcd-c6be75d6aa02"/>
                 <staticText>
                     <reportElement x="250" y="0" width="260" height="80" forecolor="#FFFFFF" uuid="3c828023-ad08-4a7f-9e80-0451fe49a068"/>
                     <textElement textAlignment="Center" verticalAlignment="Middle">
@@ -59,21 +64,21 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="20"/>
                 </textElement>
-                <text><![CDATA[User Id : ]]></text>
+                <text><![CDATA[vendor name : ]]></text>
             </staticText>
             <textField>
                 <reportElement x="120" y="12" width="100" height="30" uuid="91162adb-f30b-4e12-8eb4-a49861fd2dd2"/>
                 <textElement textAlignment="Left" verticalAlignment="Middle">
                     <font size="20"/>
                 </textElement>
-                <textFieldExpression><![CDATA[$F{userId}]]></textFieldExpression>
+                <textFieldExpression><![CDATA[$F{vendorName}]]></textFieldExpression>
             </textField>
             <staticText>
                 <reportElement x="247" y="0" width="210" height="42" uuid="f50e0e3a-50a0-4ec6-ba25-fe27012c213c"/>
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="20"/>
                 </textElement>
-                <text><![CDATA[ORDERS Report]]></text>
+                <text><![CDATA[Profits Report]]></text>
             </staticText>
             <textField>
                 <reportElement x="530" y="10" width="290" height="30" uuid="8fc6948b-9840-4bdd-af1a-4e2b4865c35c"/>
@@ -87,7 +92,7 @@
     <columnHeader>
         <band height="30" splitType="Stretch">
             <staticText>
-                <reportElement mode="Opaque" x="30" y="0" width="70" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="326dc3f2-6190-432f-a3e4-b70d88f04844">
+                <reportElement mode="Opaque" x="30" y="0" width="90" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="326dc3f2-6190-432f-a3e4-b70d88f04844">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c15c8cfc-4b6a-41d7-a8dd-2efcbb1cd0bd"/>
                 </reportElement>
                 <box>
@@ -96,10 +101,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[ORDER ID]]></text>
+                <text><![CDATA[PRODUCT ID]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="100" y="0" width="120" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="735f2e46-7410-4ff8-b105-a2e97af6211d">
+                <reportElement mode="Opaque" x="120" y="0" width="136" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="735f2e46-7410-4ff8-b105-a2e97af6211d">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="cc667c8a-7cf1-4477-b610-993e60dc971f"/>
                 </reportElement>
                 <box>
@@ -108,10 +113,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[ORDER DATE]]></text>
+                <text><![CDATA[NAME]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="220" y="0" width="144" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="01afa4f4-2f6b-4405-ae68-e267fc0d1d79">
+                <reportElement mode="Opaque" x="256" y="0" width="154" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="01afa4f4-2f6b-4405-ae68-e267fc0d1d79">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="72868b3b-c2de-4500-b819-cdb742007e6b"/>
                 </reportElement>
                 <box>
@@ -120,10 +125,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[USER NAME]]></text>
+                <text><![CDATA[CATEGORY]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="364" y="0" width="154" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="5a076ada-d7af-45fe-9d34-e73e413b2745">
+                <reportElement mode="Opaque" x="410" y="0" width="140" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="5a076ada-d7af-45fe-9d34-e73e413b2745">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9558e96b-aad0-47a1-9305-1681d96ba65f"/>
                 </reportElement>
                 <box>
@@ -132,10 +137,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[USER ADDRESS]]></text>
+                <text><![CDATA[COST]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="518" y="0" width="112" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="821ce6e5-aa4b-4569-8233-f14f6aacb45e">
+                <reportElement mode="Opaque" x="550" y="0" width="130" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="821ce6e5-aa4b-4569-8233-f14f6aacb45e">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="017d99c1-57ef-436c-9356-1ce197947c23"/>
                 </reportElement>
                 <box>
@@ -144,10 +149,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[SHIPPING]]></text>
+                <text><![CDATA[PRICE]]></text>
             </staticText>
             <staticText>
-                <reportElement mode="Opaque" x="630" y="0" width="110" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="28ad0d08-5177-4b6a-bcbf-4295c8c1382d">
+                <reportElement mode="Opaque" x="680" y="0" width="142" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="28ad0d08-5177-4b6a-bcbf-4295c8c1382d">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="b3d3dd88-9ab5-4615-bed0-bc83125c8694"/>
                 </reportElement>
                 <box>
@@ -156,7 +161,7 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12" isBold="true"/>
                 </textElement>
-                <text><![CDATA[TOTAL]]></text>
+                <text><![CDATA[PROFIT]]></text>
             </staticText>
             <staticText>
                 <reportElement mode="Opaque" x="-20" y="0" width="50" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="4b87df01-dca2-445a-a8e9-87a31175b74e"/>
@@ -168,24 +173,12 @@
                 </textElement>
                 <text><![CDATA[No.]]></text>
             </staticText>
-            <staticText>
-                <reportElement mode="Opaque" x="740" y="0" width="90" height="30" forecolor="#006699" backcolor="#E6E6E6" uuid="f511ce87-112b-4328-8052-e476ffd7a158">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="b3d3dd88-9ab5-4615-bed0-bc83125c8694"/>
-                </reportElement>
-                <box>
-                    <pen lineWidth="1.0"/>
-                </box>
-                <textElement textAlignment="Center" verticalAlignment="Middle">
-                    <font size="12" isBold="true"/>
-                </textElement>
-                <text><![CDATA[NET TOTAL]]></text>
-            </staticText>
         </band>
     </columnHeader>
     <detail>
         <band height="30" splitType="Stretch">
             <textField>
-                <reportElement x="30" y="0" width="70" height="30" uuid="3a667b5a-e937-451e-a2b2-44e5f25a8728">
+                <reportElement x="30" y="0" width="90" height="30" uuid="3a667b5a-e937-451e-a2b2-44e5f25a8728">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c15c8cfc-4b6a-41d7-a8dd-2efcbb1cd0bd"/>
                 </reportElement>
                 <box>
@@ -194,10 +187,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12"/>
                 </textElement>
-                <textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
+                <textFieldExpression><![CDATA[$F{productId}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="100" y="0" width="120" height="30" uuid="23ad2728-8053-4966-b7f3-9101948802af">
+                <reportElement x="120" y="0" width="136" height="30" uuid="23ad2728-8053-4966-b7f3-9101948802af">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="cc667c8a-7cf1-4477-b610-993e60dc971f"/>
                 </reportElement>
                 <box>
@@ -206,10 +199,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12"/>
                 </textElement>
-                <textFieldExpression><![CDATA[$F{orderDate}]]></textFieldExpression>
+                <textFieldExpression><![CDATA[$F{productName}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="220" y="0" width="144" height="30" uuid="49ec03d7-d661-4094-9991-761950a5729f">
+                <reportElement x="256" y="0" width="154" height="30" uuid="49ec03d7-d661-4094-9991-761950a5729f">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="72868b3b-c2de-4500-b819-cdb742007e6b"/>
                 </reportElement>
                 <box>
@@ -218,10 +211,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12"/>
                 </textElement>
-                <textFieldExpression><![CDATA[$F{userName}]]></textFieldExpression>
+                <textFieldExpression><![CDATA[$F{categoryName}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="364" y="0" width="154" height="30" uuid="df651284-fbf4-420b-b3c6-3d2ef44c4ba7">
+                <reportElement x="410" y="0" width="140" height="30" uuid="df651284-fbf4-420b-b3c6-3d2ef44c4ba7">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9558e96b-aad0-47a1-9305-1681d96ba65f"/>
                 </reportElement>
                 <box>
@@ -230,10 +223,10 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12"/>
                 </textElement>
-                <textFieldExpression><![CDATA[$F{userAddress}]]></textFieldExpression>
+                <textFieldExpression><![CDATA[$F{cost}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="518" y="0" width="112" height="30" uuid="5daa052e-bf88-46d4-a695-22222aaf72a5">
+                <reportElement x="550" y="0" width="130" height="30" uuid="5daa052e-bf88-46d4-a695-22222aaf72a5">
                     <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="017d99c1-57ef-436c-9356-1ce197947c23"/>
                 </reportElement>
                 <box>
@@ -242,7 +235,7 @@
                 <textElement textAlignment="Center" verticalAlignment="Middle">
                     <font size="12"/>
                 </textElement>
-                <textFieldExpression><![CDATA[$F{shipping}]]></textFieldExpression>
+                <textFieldExpression><![CDATA[$F{price}]]></textFieldExpression>
             </textField>
             <textField>
                 <reportElement x="-20" y="0" width="50" height="30" uuid="82f418c7-a0f7-4744-99c1-bfc87bfa1bfb"/>
@@ -255,22 +248,14 @@
                 <textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
             </textField>
             <textField>
-                <reportElement x="630" y="0" width="110" height="30" uuid="c5b02ea6-456b-4159-99db-08a4bc51b41e">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ee6b0869-2b4c-4a97-8a27-661d4397df95"/>
-                </reportElement>
+                <reportElement x="680" y="0" width="142" height="30" uuid="4fa7ca67-b2f5-421d-a213-7cebcc70d295"/>
                 <box>
                     <pen lineWidth="0.5"/>
                 </box>
-                <textElement textAlignment="Center" verticalAlignment="Middle"/>
-                <textFieldExpression><![CDATA[$F{total}]]></textFieldExpression>
-            </textField>
-            <textField>
-                <reportElement x="740" y="0" width="90" height="30" uuid="989e310e-8db9-48b3-8d94-97a46e1654ea"/>
-                <box>
-                    <pen lineWidth="0.5"/>
-                </box>
-                <textElement textAlignment="Center" verticalAlignment="Middle"/>
-                <textFieldExpression><![CDATA[$V{netTotal}]]></textFieldExpression>
+                <textElement textAlignment="Center" verticalAlignment="Middle">
+                    <font size="12"/>
+                </textElement>
+                <textFieldExpression><![CDATA[$V{profit}]]></textFieldExpression>
             </textField>
         </band>
     </detail>
@@ -293,6 +278,21 @@
         </band>
     </pageFooter>
     <summary>
-        <band height="49" splitType="Stretch"/>
+        <band height="49" splitType="Stretch">
+            <textField>
+                <reportElement x="660" y="0" width="182" height="49" uuid="5380177f-48b3-4bf7-9aa4-68fa6ba4d3c0"/>
+                <textElement textAlignment="Center" verticalAlignment="Middle">
+                    <font size="20"/>
+                </textElement>
+                <textFieldExpression><![CDATA[$V{Variable_1}]]></textFieldExpression>
+            </textField>
+            <staticText>
+                <reportElement x="510" y="0" width="170" height="49" uuid="edd6271a-9eec-4e76-8a89-3113c2d3ad04"/>
+                <textElement textAlignment="Right" verticalAlignment="Middle">
+                    <font size="20"/>
+                </textElement>
+                <text><![CDATA[TOTAL PROFIT :]]></text>
+            </staticText>
+        </band>
     </summary>
 </jasperReport>
